--- a/proposal.html
+++ b/proposal.html
@@ -822,6 +822,7 @@ m1 = step(m0, scope = ~StringencyIndex+StringencyLegacyIndex+GovernmentResponseI
 #&gt; Residual standard error: 0.4541 on 154 degrees of freedom
 #&gt; Multiple R-squared:  0.07736,    Adjusted R-squared:  0.0474 
 #&gt; F-statistic: 2.582 on 5 and 154 DF,  p-value: 0.02834</code></pre>
+<p>Com veiem, en aquest model l’únic terme significatiu és l’associata a la mesura C8=2 envers la mesura C8=1, on podem veure que hi ha diferències significatives entre aplicar quarantena a les arrivades (C8=2) i fer controls a l’entrada (C8=1). En el cas d’aplicar quarantena, sembla que el nombre d’esdeveniments augment. Segurament sigui per les condicions que porten a aplicar aquestes mesures.</p>
 <p>Anem a veure si es compleixen els supòsits bàsics dels models lineals:</p>
 <ul>
 <li><strong>Homoscedasticitat dels residus</strong></li>
